# BigInteger

./: CMakeLists.txt  README.md
src/: big_integer.cpp  big_integer.hpp
tests/: CMakeLists.txt  test_big_integer.cpp
